Net/2c23b80ab34b_error.log


--------------------------------------------------------------------
                      Generation ODE/SDE model
--------------------------------------------------------------------


#Computing p-semiflows and place bounds: 

Place invariants for net /home/MS_Model:

   Resting_Teff_out   Resting_Teff_temp
   ODC_le1   ODC_le2   ODC_le3   ODC_le4   ODC_le5
   Resting_Treg_out   Resting_Treg_temp

Only 9 places out of 26 are covered by some P-invariant.

The following places are not covered by any P-invariant:

 Teff_in Treg_in EffectorMemory IL17_in IFNg_in IL10_in Treg_out Teff_out Antigen NK_out BBB Resting_Treg_in Resting_Teff_in IL10_out IL17_out IFNg_out DAC

/usr/local/GreatSPN/bin/PN2ODE /home/MS_Model -M


 =========================================================
|	      	        PN to ODE        	          |
 =========================================================

 If you find any bug, send an email to beccuti@di.unito.it!
Transition TregActivation_out has function:  FN:TregActivation

Transition TregKillsTeff_in has function:  FN:Killing

Transition TeffKillsODC_l_le1 has function:  FN:KillingODC

Transition TeffKillsODC_l_le2 has function:  FN:KillingODC

Transition TeffKillsODC_l_le3 has function:  FN:KillingODC

Transition TeffKillsODC_l_le4 has function:  FN:KillingODC

Transition TregDup_in has function:  FN:TregDup

Transition TeffActivation_out has function:  FN:TeffActivation

Transition MemActivation has function:  FN:MemActivation

Transition TeffDup_Sym_in has function:  FN:TeffDup

Transition TeffkillsA has function:  FN:Killing

Transition NKentry has function:  FN:NKBorn

Transition TeffDup_Asym_out has function:  FN:TeffDup

Transition TeffDup_Sym_out has function:  FN:TeffDup

Transition TregDup_out has function:  FN:TregDup

Transition TregKillsTeff_out has function:  FN:Killing

Transition TregActivation_in has function:  FN:TregActivation

Transition TeffActivation_in_l_le1 has function:  FN:TeffActivation

Transition TeffActivation_in_l_le2 has function:  FN:TeffActivation

Transition TeffActivation_in_l_le3 has function:  FN:TeffActivation

Transition TeffActivation_in_l_le4 has function:  FN:TeffActivation

Transition TeffActivation_in_l_le5 has function:  FN:TeffActivation

Transition DACkillTreg has function:  FN:DACKill

Transition DACkillTeff has function:  FN:DACKill



------------------------------------------------
               Start  encoding
------------------------------------------------

Opening file: /home/MS_Model.bnd
Opening file: /home/MS_Model.pin
Number of P-invs: 3

	P-invariant: 
	 0 0 0 0 0 0 0 1 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 | 0
	 0 0 1 1 1 1 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 | 1000
	 0 0 0 0 0 0 0 0 1 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 | 0
	matrix is singular

	U
	 0 0 0 0 0 0 0 1 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 | 0
	 0 0 1 1 1 1 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 | 1000
	 0 0 0 0 0 0 0 0 1 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 | 0
	
	L
	 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
	 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
	 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
	
	P
	 0 1 2

START EXECUTION...
FN:TregActivation

FN:Killing

FN:KillingODC

FN:KillingODC

FN:KillingODC

FN:KillingODC

FN:TregDup

FN:TeffActivation

FN:MemActivation

FN:TeffDup

FN:Killing

FN:NKBorn

FN:TeffDup

FN:TeffDup

FN:TregDup

FN:Killing

FN:TregActivation

FN:TeffActivation

FN:TeffActivation

FN:TeffActivation

FN:TeffActivation

FN:TeffActivation

FN:DACKill

FN:DACKill


	Warning: no imlicit places are considered.

	Done.

------------------------------------------------
                 End encoding
------------------------------------------------


===================== INFO =====================
 Total Time: 0.001139 sec
 Total Used Memory: 2852KB
 Output saved in: MS_Model.cpp
================================================

/home/MS_Model
#cd /usr/local/GreatSPN/scripts/../inst_src

#Copying file form /usr/local/GreatSPN/scripts/../inst_src to /tmp/tmp.Hli7vscsn5

#cat /tmp/tmp.Hli7vscsn5/tmpB  /home/transition.cpp  /tmp/tmp.Hli7vscsn5/tmpE >> /tmp/tmp.Hli7vscsn5/tmpA
FuncT
#cat /tmp/tmp.Hli7vscsn5/tmpA >>  /tmp/tmp.Hli7vscsn5/class.cpp

#cd /tmp/tmp.Hli7vscsn5

#Compiling ... 
g++ -I./  -o  /home/MS_Model.solver  /home/MS_Model.cpp  ./class.cpp  ./lsode.cpp  -O3 -std=c++11 -lm -Wall
./class.cpp: In function 'double SDE::TeffActivation(double*, std::map<std::__cxx11::basic_string<char>, int>&, std::map<std::__cxx11::basic_string<char>, int>&, const std::vector<std::__cxx11::basic_string<char> >&, const SDE::InfTr*, int, const double&)':
./class.cpp:4062:50: error: 'Cinf' was not declared in this scope; did you mean 'Cifn'?
 4062 |  rate = TeE * RestingTeff * A * (0.5 + exp(-IFNg/Cinf) ) ;
      |                                                  ^~~~
      |                                                  Cifn
./class.cpp: In function 'double SDE::MemActivation(double*, std::map<std::__cxx11::basic_string<char>, int>&, std::map<std::__cxx11::basic_string<char>, int>&, const std::vector<std::__cxx11::basic_string<char> >&, const SDE::InfTr*, int, const double&)':
./class.cpp:4131:45: error: 'Cinf' was not declared in this scope; did you mean 'Cifn'?
 4131 |   rate = MemE * Mem  * A * (0.5 + exp(-IFNg/Cinf) ) ;
      |                                             ^~~~
      |                                             Cifn
make: *** [makefile:27: normal] Error 1
#Error during compilation. 


